--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -40,5 +40,5 @@ configEnvSpecific:
   APPLICATIONINSIGHTS_INSTRUMENTATION_LOGGING_LEVEL: "OFF"
   B4F_ONBOARDING_LOG_LEVEL: "DEBUG"
   REST_CLIENT_LOGGER_LEVEL: "FULL"
-  MS_ONBOARDING_URL: "https://selc-u-onboarding-ms-ca.calmsky-143987c1.westeurope.azurecontainerapps.io"
+  MS_ONBOARDING_URL: "https://selc-u-onboarding-ms-ca.agreeablesky-f71e6306.westeurope.azurecontainerapps.io"
   ONBOARDING_ALLOWED_INSTITUTIONS_PRODUCTS: "{'prod-interop':{'*'},'prod-pn':{'*'},'prod-io':{'*'},'prod-io-premium':{'*'},'prod-pagopa':{'*'},'prod-pn-coll':{'*'},'prod-fd':{'*'},'prod-fd-garantito':{'*'},'prod-io-sign':{'*'},'prod-pn-dev':{'*'},'prod-sendino':{'*'}}"
