getInstitutionById rest client and connector

--- a/connector/rest/src/main/resources/config/party-process-rest-client.properties
+++ b/connector/rest/src/main/resources/config/party-process-rest-client.properties
@@ -10,6 +10,7 @@ rest-client.party-process.getOnBoardingInfo.path=/onboarding/info
 rest-client.party-process.getOnboardings.path=/institutions/{institutionId}/onboardings/
 rest-client.party-process.getInstitutions.path=/institutions/
 rest-client.party-process.getInstitutionByExternalId.path=/external/institutions/{externalId}
+rest-client.party-process.getInstitutionById.path=/institutions/{institutionId}
 rest-client.party-process.createInstitutionFromIpa.path=/institutions/from-ipa/
 rest-client.party-process.createInstitutionFromAnac.path=/institutions/from-anac/
 rest-client.party-process.createInstitutionFromIvass.path=/institutions/from-ivass/
