avoid log injection

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>selc-commons-base</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.owasp.encoder</groupId>
+            <artifactId>encoder</artifactId>
+            <version>1.2.3</version>
+        </dependency>
+        <dependency>
             <groupId>it.pagopa.selfcare</groupId>
             <artifactId>selc-commons-base</artifactId>
             <type>test-jar</type>
