--- a/connector/rest/src/main/resources/config/ms-onboarding-rest-client.properties
+++ b/connector/rest/src/main/resources/config/ms-onboarding-rest-client.properties
@@ -2,6 +2,7 @@
 rest-client.ms-onboarding.base-url=${MS_ONBOARDING_URL:http://10.1.1.250:80/ms-onboarding/v1}
 rest-client.ms-onboarding-api.serviceCode=ms-onboarding-api
 rest-client.ms-onboarding-token-api.serviceCode=ms-onboarding-token-api
+rest-client.ms-onboarding-aggregates-api.serviceCode=ms-onboarding-aggregates-api
 rest-client.ms-onboarding-support-api.serviceCode=ms-onboarding-support-api
 feign.client.config.ms-onboarding-api.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
 feign.client.config.ms-onboarding-api.errorDecoder=it.pagopa.selfcare.onboarding.connector.rest.decoder.FeignErrorDecoder
@@ -18,3 +19,8 @@ feign.client.config.ms-onboarding-support-api.errorDecoder=it.pagopa.selfcare.on
 feign.client.config.ms-onboarding-support-api.readTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_READ_TIMEOUT:${REST_CLIENT_READ_TIMEOUT:5000}}
 feign.client.config.ms-onboarding-support-api.loggerLevel=${USERVICE_PARTY_PROCESS_REST_CLIENT_LOGGER_LEVEL:${REST_CLIENT_LOGGER_LEVEL:FULL}}
 feign.client.config.ms-onboarding-support-api.connectTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
+feign.client.config.ms-onboarding-aggregates-api.requestInterceptors[0]=it.pagopa.selfcare.commons.connector.rest.interceptor.AuthorizationHeaderInterceptor
+feign.client.config.ms-onboarding-aggregates-api.errorDecoder=it.pagopa.selfcare.onboarding.connector.rest.decoder.FeignErrorDecoder
+feign.client.config.ms-onboarding-aggregates-api.readTimeout=${AGGREGATES_REST_CLIENT_READ_TIMEOUT:90000}
+feign.client.config.ms-onboarding-aggregates-api.loggerLevel=${USERVICE_PARTY_PROCESS_REST_CLIENT_LOGGER_LEVEL:${REST_CLIENT_LOGGER_LEVEL:FULL}}
+feign.client.config.ms-onboarding-aggregates-api.connectTimeout=${AGGREGATES_REST_CLIENT_CONNECT_TIMEOUT:90000}
