--- a/web/pom.xml
+++ b/web/pom.xml
@@ -30,6 +30,12 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>it.pagopa.selfcare</groupId>
+            <artifactId>onboarding-sdk-common</artifactId>
+            <version>0.1.19</version>
+        </dependency>
+
     </dependencies>
 
 </project>
