--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
                 <version>${selc-commons.version}</version>
                 <type>test-jar</type>
             </dependency>
+            <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>2.3.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
