--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
                 <artifactId>jakarta.xml.bind-api</artifactId>
                 <version>2.3.2</version>
             </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>0.11.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
