--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <properties>
         <selc-commons.version>2.5.5</selc-commons.version>
         <sonar.host.url>https://sonarcloud.io/</sonar.host.url>
+        <parent-commons-sdk-version>0.6.9</parent-commons-sdk-version>
     </properties>
 
     <dependencyManagement>
