--- a/web/pom.xml
+++ b/web/pom.xml
@@ -31,8 +31,14 @@
             <artifactId>selc-onboarding-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-boot-starter</artifactId>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>it.pagopa.selfcare</groupId>
