--- a/connector/rest/src/main/resources/config/ms-onboarding-rest-client.properties
+++ b/connector/rest/src/main/resources/config/ms-onboarding-rest-client.properties
@@ -30,3 +30,7 @@ feign.client.config.ms-onboarding-institution-api.errorDecoder=it.pagopa.selfcar
 feign.client.config.ms-onboarding-institution-api.readTimeout=${AGGREGATES_REST_CLIENT_READ_TIMEOUT:90000}
 feign.client.config.ms-onboarding-institution-api.loggerLevel=${USERVICE_PARTY_PROCESS_REST_CLIENT_LOGGER_LEVEL:${REST_CLIENT_LOGGER_LEVEL:FULL}}
 feign.client.config.ms-onboarding-institution-api.connectTimeout=${AGGREGATES_REST_CLIENT_CONNECT_TIMEOUT:90000}
+feign.client.config.ms-onboarding-internal-api.errorDecoder=it.pagopa.selfcare.onboarding.connector.rest.decoder.FeignErrorDecoder
+feign.client.config.ms-onboarding-internal-api.readTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_READ_TIMEOUT:${REST_CLIENT_READ_TIMEOUT:5000}}
+feign.client.config.ms-onboarding-internal-api.loggerLevel=${USERVICE_PARTY_PROCESS_REST_CLIENT_LOGGER_LEVEL:${REST_CLIENT_LOGGER_LEVEL:FULL}}
+feign.client.config.ms-onboarding-internal-api.connectTimeout=${USERVICE_PARTY_PROCESS_REST_CLIENT_CONNECT_TIMEOUT:${REST_CLIENT_CONNECT_TIMEOUT:5000}}
