--- a/connector/rest/src/main/resources/config/ms-onboarding-rest-client.properties
+++ b/connector/rest/src/main/resources/config/ms-onboarding-rest-client.properties
@@ -2,6 +2,7 @@ rest-client.ms-onboarding.base-url=${MS_ONBOARDING_URL:http://10.1.1.250:80/ms-o
 rest-client.ms-onboarding-api.serviceCode=ms-onboarding-api
 rest-client.ms-onboarding-token-api.serviceCode=ms-onboarding-token-api
 rest-client.ms-onboarding-aggregates-api.serviceCode=ms-onboarding-aggregates-api
+rest-client.ms-onboarding-billing-api.serviceCode=ms-onboarding-billing-api
 rest-client.ms-onboarding-institution-api.serviceCode=ms-onboarding-institution-api
 rest-client.ms-onboarding-support-api.serviceCode=ms-onboarding-support-api
 rest-client.ms-onboarding-internal-api.serviceCode=ms-onboarding-internal-api
