--- a/connector/rest/src/main/resources/config/user-registry-rest-client.properties
+++ b/connector/rest/src/main/resources/config/user-registry-rest-client.properties
@@ -1,4 +1,5 @@
 rest-client.user-registry.serviceCode=user-registry
+rest-client.user-registry.apiKey=${USERVICE_USER_REGISTRY_API_KEY}
 rest-client.user-registry.base-url=${USERVICE_USER_REGISTRY_URL:http://localhost:8080/pdnd-interop-uservice-user-registry/0.0.1}
 rest-client.user-registry.getUserByExternalId.path=/users/search
 rest-client.user-registry.getUserByInternalId.path=/users/{id}
